--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html>
-    <style>
-        
-    </style>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./assets/style.css">
     </head>
-    <body id="App">
-
+    <body>
+        <main id="App"></main>
     </body>
 </html>
